Post thanksgiving break

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,6 +65,7 @@
         "utility": "cpp",
         "vector": "cpp",
         "__functional_03": "cpp",
-        "__functional_base_03": "cpp"
+        "__functional_base_03": "cpp",
+        "list": "cpp"
     }
 }
